2000-06-19  Dave Peticolas  <dave@krondo.com>

	* src/gnome/top-level.c: configure list auto-popping from here.

	* src/register/gnome/combocell-gnome.c: determine whether or not
	to auto-pop lists based on a class variable, and not by looking
	up the guile function. This removes a src/guile dependency from
	src/register/gnome.

2000-06-14  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-item-edit.c (item_edit_show_list):
	make sure the current selected item is visible and, before doing
	so, process all pending events to make sure the list is shown and
	sized first.

2000-06-13  Dave Peticolas  <dave@krondo.com>

	* src/SplitLedger.c: refresh the main window before refreshing the
	register. This makes sure balances are recomputed first.

	* src/engine/Transaction.c (xaccSplitSetBaseValue): mark the split
	as having changed.

	* src/gnome/gnc-currency-edit.c: loosen the restrictions on what
	can be typed in. The 'currency' could potentially be a stock
	symbol.

2000-06-12  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-transfer.c: don't use 'Categories', it's a
	confusing term.

	* src/SplitLedger.c (LedgerAutoCompletion): open transaction
	without deferring rebalancing.

2000-06-09  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm (): commented out
	"merged" style because of conflict with double-column amounts.

2000-06-08  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/average-balance.scm (average-balance-renderer): 
	added a condition to catch incorrectly entered dates without crashing.

2000-06-07  Dave Peticolas  <dave@krondo.com>

	* src/engine/Query.c: fixed a "dave is an idiot" bug in cropping
	the split list.

	* src/gnome/window-register.c (gnc_register_create_menu_bar): don't
	use stock close menu -- it's for closing files not closing windows.

	* src/gnome/dialog-add.c (gnc_ui_accWindow_create_account): don't
	make an opening balance transaction.
